--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Himpunan Mahasiswa Manajemen UPNVJT</title>
-    <link rel="icon" href="assets/img/logoooo.png">
+    <link rel="icon" href="img/logoooo.png">
     <!-- bootstrap -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <!-- owl carousel -->
@@ -12,7 +12,7 @@
     <!-- font awasome -->
     <link rel="stylesheet" href="assets/css/all.min.css">
     <!-- style css custom kita -->
-    <link rel="stylesheet" href="assets/assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <link href="//maxcdn.bootstrapcdn.com/font-awasome/5.11.1/css/font-awasome.min.css" rel="stylesheet">
     <link rel='stylesheet' id='menu-animation-css' href="assets/assets/css/menu-animation.css" media='all' />
     <script src="https://kit.fontawesome.com/9b095ed5fc.js" crossorigin="anonymous"></script>
