--- a/index.html
+++ b/index.html
@@ -549,11 +549,11 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" ></script>
 	<script src="js/owl.carousel.min.js"></script>
 	<script src="js/script.js"></script>
- <script src="assets/js/jquery-3.3.1.slim.min.js"></script>
- <script src="assets/js/bootstrap.min.js"></script>
- <script src="assets/js/owl.carousel.min.js"></script>
- <script src="assets/js/main.js"></script>
- <script src="assets/js/fontawesome.min.js"></script>
+ <script src="js/jquery-3.3.1.slim.min.js"></script>
+ <script src="js/bootstrap.min.js"></script>
+ <script src="js/owl.carousel.min.js"></script>
+ <script src="js/main.js"></script>
+ <script src="js/fontawesome.min.js"></script>
  <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
  <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
  <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
