--- a/Profil.html
+++ b/Profil.html
@@ -3,16 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="assets/img/logoooo.png">
+    <link rel="icon" href="img/logoooo.png">
     <title>Himpunan Mahasiswa Manajemen UPNVJT</title>
     <!-- bootstrap -->
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <!-- owl carousel -->
-    <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
+    <link rel="stylesheet" href="css/owl.carousel.min.css">
     <!-- font awasome -->
-    <link rel="stylesheet" href="assets/css/all.min.css">
+    <link rel="stylesheet" href="css/all.min.css">
     <!-- style css custom kita -->
-    <link rel="stylesheet" href="assets/css/Profil.css">
+    <link rel="stylesheet" href="css/Profil.css">
     <link href="//maxcdn.bootstrapcdn.com/font-awasome/5.11.1/css/font-awasome.min.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/9b095ed5fc.js" crossorigin="anonymous"></script>
     <link rel='stylesheet' id='menu-animation-css' href="assets/assets/css/menu-animation.css" media='all' />
@@ -490,11 +490,11 @@
 
 
 
-  <script src="assets/js/jquery-3.3.1.slim.min.js"></script>
-  <script src="assets/js/bootstrap.min.js"></script>
-  <script src="assets/js/owl.carousel.min.js"></script>
-  <script src="assets/js/main.js"></script>
-  <script src="assets/js/fontawesome.min.js"></script>
+  <script src="js/jquery-3.3.1.slim.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/owl.carousel.min.js"></script>
+  <script src="js/main.js"></script>
+  <script src="js/fontawesome.min.js"></script>
  
  
     </section>
