--- a/akademik.html
+++ b/akademik.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Himpunan Mahasiswa Manajemen UPNVJT</title>
+    <link rel="icon" href="img/logoooo.png">
     <!-- bootstrap -->
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <!-- owl carousel -->
-    <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
+    <link rel="stylesheet" href="css/owl.carousel.min.css">
     <!-- font awasome -->
-    <link rel="stylesheet" href="assets/css/akademik.css">
+    <link rel="stylesheet" href="css/akademik.css">
     <!-- style css custom kita -->
-    <link rel="stylesheet" href="assets/css/akademik.css">
+    <link rel="stylesheet" href="css/akademik.css">
     <link href="//maxcdn.bootstrapcdn.com/font-awasome/5.11.1/css/font-awasome.min.css" rel="stylesheet">
-    <link rel='stylesheet' id='menu-animation-css' href="assets/assets/css/menu-animation.css" media='all' />
+    <link rel='stylesheet' id='menu-animation-css' href="assets/css/menu-animation.css" media='all' />
     <script src="https://kit.fontawesome.com/9b095ed5fc.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
