--- a/advo.html
+++ b/advo.html
@@ -265,8 +265,8 @@
       </section>
 
 
-       <script src="assets/js/jquery-3.3.1.slim.min.js"></script>
-       <script src="assets/js/bootstrap.min.js"></script>
-       <script src="assets/js/owl.carousel.min.js"></script>
-       <script src="assets/js/main.js"></script>
-       <script src="assets/js/fontawesome.min.js"></script>
+       <script src="js/jquery-3.3.1.slim.min.js"></script>
+       <script src="js/bootstrap.min.js"></script>
+       <script src="js/owl.carousel.min.js"></script>
+       <script src="js/main.js"></script>
+       <script src="js/fontawesome.min.js"></script>
