--- a/newsss.html
+++ b/newsss.html
@@ -20,7 +20,7 @@
     <link href="owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
 
     <!-- Customized Bootstrap Stylesheet -->
-    <link href="assets/css/newsss.css" rel="stylesheet">
+    <link href="newsss.css" rel="stylesheet">
 </head>
 
 <body>
@@ -625,7 +625,7 @@
     <script src="owlcarousel/owl.carousel.min.js"></script>
 
     <!-- Template Javascript -->
-    <script src="assets/js/newsss.js"></script>
+    <script src="newsss.js"></script>
 </body>
 
 </html>
