--- a/index.html
+++ b/index.html
@@ -532,6 +532,117 @@
           <li><a href="#">Umum</a></li>
           <li><a href="#">Pengaduan</a></li>
       </section>
+
+
+<section>
+   </head>
+    <body>
+      <div class="section-tittle">
+        <h2>MOST VIEW</h2>
+      </div>
+        <div class="slide-container swiper">
+            <div class="slide-content">
+                <div class="card-wrapper swiper-wrapper">
+                    <div class="card swiper-slide">
+                        <div class="image-content">
+                            <span class="overlay"></span>
+                            <div class="card-image">
+                                <img src="assets/img/advcntr.png" alt="" class="card-img">
+                            </div>
+                        </div>
+                        <div class="card-content">
+                            <h2 class="name">ADVOCENTER</h2>
+                            <p class="description">Kanal informasi, pelayanan, dan pengaduan KM Manajemen</p>
+                            <button class="button">View More</button>
+                        </div>
+                    </div>
+                    <div class="card swiper-slide">
+                        <div class="image-content">
+                            <span class="overlay"></span>
+                            <div class="card-image">
+                              <img src="assets/img/extrn.png" alt="" class="card-img">
+                            </div>
+                        </div>
+                        <div class="card-content">
+                            <h2 class="name">EXTERNAL PARTNER</h2>
+                            <p class="description">External Partner / Mitra Himpunan Mahasiswa Manajemen </p>
+                            <button class="button">View More</button>
+                        </div>
+                    </div>
+                    <div class="card swiper-slide">
+                        <div class="image-content">
+                            <span class="overlay"></span>
+                            <div class="card-image">
+                              <img src="assets/img/aecinter.png" alt="" class="card-img">
+                            </div>
+                        </div>
+                        <div class="card-content">
+                            <h2 class="name">AECIVEST</h2>
+                            <p class="description">Seminar Internasional Aecivest 2024 by Himpunan Mahasiswa Manajemen</p>
+                            <button class="button">View More</button>
+                        </div>
+                    </div>
+                    <div class="card swiper-slide">
+                        <div class="image-content">
+                            <span class="overlay"></span>
+                            <div class="card-image">
+                              <img src="assets/img/boothcamp.png" alt="" class="card-img">
+                            </div>
+                        </div>
+                        <div class="card-content">
+                            <h2 class="name">M-BOOTHCAMP</h2>
+                            <p class="description">Pelatihan/workshop & Upgrading Skill untuk KM Manajemen UPNVJT</p>
+                            <button class="button">View More</button>
+                        </div>
+                    </div>
+                    <div class="card swiper-slide">
+                        <div class="image-content">
+                            <span class="overlay"></span>
+                            <div class="card-image">
+                              <img src="assets/img/market.png" alt="" class="card-img">
+                            </div>
+                        </div>
+                        <div class="card-content">
+                            <h2 class="name">MANAGEMENT MARKET</h2>
+                            <p class="description">Wadah Promosi Bisnis Mahasiswa Manajemen UPNVJT</p>
+                            <button class="button">View More</button>
+                        </div>
+                    </div>
+                    <div class="card swiper-slide">
+                        <div class="image-content">
+                            <span class="overlay"></span>
+                            <div class="card-image">
+                              <img src="assets/img/podc.png" alt="" class="card-img">
+                            </div>
+                        </div>
+                        <div class="card-content">
+                            <h2 class="name">Management Podcast</h2>
+                            <p class="description">Podcast yang disiarkan langsung di Youtube, Instagram, & Spotify</p>
+                            <button class="button">View More</button>
+                        </div>
+                    </div>
+                    <div class="card swiper-slide">
+                        <div class="image-content">
+                            <span class="overlay"></span>
+                            <div class="card-image">
+                              <img src="assets/img/sporta.png" alt="" class="card-img">
+                            </div>
+                        </div>
+                        <div class="card-content">
+                            <h2 class="name">SPORT ANNUAL</h2>
+                            <p class="description">Kegiatan Olahraga yang diselenggarakan Himpunan Mahasiswa Manjemen/p>
+                            <button class="button">View More</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="swiper-button-next swiper-navBtn"></div>
+            <div class="swiper-button-prev swiper-navBtn"></div>
+            <div class="swiper-pagination"></div>
+        </div>
+        
+    </body>
+ </section>
       
 
 
@@ -557,6 +668,7 @@
  <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
  <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
  <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
+ <script src="js/swiper-bundle.min.js"></script>
 
  
 
