--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="assets/css/all.min.css">
     <!-- style css custom kita -->
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
     <link href="//maxcdn.bootstrapcdn.com/font-awasome/5.11.1/css/font-awasome.min.css" rel="stylesheet">
     <link rel='stylesheet' id='menu-animation-css' href="assets/css/menu-animation.css" media='all' />
     <script src="https://kit.fontawesome.com/9b095ed5fc.js" crossorigin="anonymous"></script>
